<resources>
    <string name="app_name">AppliCHU</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_Medical">Medical</string>
    <string name="title_user">Utilisateur</string>
    <string name="title_urgence">Urgence</string>
    <string name="title_administration">Administration</string>
</resources>
