<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_administration"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_administration" />

    <item
        android:id="@+id/navigation_medical"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_Medical" />

    <item
        android:id="@+id/navigation_user"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_user" />

    <item
        android:id="@+id/navigation_urgence"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_urgence" />

</menu>
